# frontend_zebrafishdetector

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GPATH  GRTAGS  GTAGS  Makefile  cmake_install.cmake
cfg/: VID5.xml  camera_data.yml  conf_calib.xml
include/: camera_interface.hpp  image_processing.hpp  serial_interface.hpp  xyPlotter.hpp
src/: calibrate.cpp  calibration.cpp  camera_interface.cpp  image_processing.cpp  main.cpp  serial_interface.cpp  uart_test.cpp  xyPlotter.cpp
